--- a/Services.html
+++ b/Services.html
@@ -83,7 +83,7 @@
   
   </section><!-- End Breadcrumbs Section -->
     
-<br><br>
+<br><br><br>
 
 
 
@@ -100,9 +100,9 @@
 
 
          <!-- ======= Team Section ======= -->
-     <section id="team">
+         <section id="team">
       
-
+          <div class="container" data-aos="fade-up">
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
@@ -175,7 +175,7 @@
               <div class="icon-box">
                 <div class="icon"><img class="img" src="assets/img/hero-carousel/اعداد السياسات والاجراءات.png"></div>
                 <h4 class="title"><a href="Services.html">اعدادات السياسات  والاجراءات الداخلية</a></h4>
-                <br><br><br><br>
+                <br><br><br>
               </div>
               <div class="member-info">
                 <div class="member-info-content">
@@ -344,7 +344,7 @@
               <div class="icon-box">
                 <div class="icon"><img class="img" src="assets/img/hero-carousel/الخطط المالية.png"></div>
                 <h4><a href="Services.html">وضع الخطط المالية والموازنات التقديرية </a></h4>
-                <br><br><br>
+                <br><br>
               </div>
               <div class="member-info">
                 <div class="member-info-content">
@@ -471,7 +471,7 @@
               <div class="icon-box">
                 <div class="icon"><img class="img" src="assets/img/hero-carousel/مراجعة وتحسين العمليات الحسابية.png"></div>
                 <h4><a href="Services.html">مراجعة وتحسين العمليات الحسابية </a></h4>
-                <br><br><br>
+                <br><br>
               </div>
               <div class="member-info">
                 <div class="member-info-content">
@@ -533,6 +533,7 @@
           </div>
 
         </div>
+      </div>
 
       </div>
     </section><!-- End Team Section -->
