--- a/order.html
+++ b/order.html
@@ -95,10 +95,10 @@
 
   <!-- ======= Contact Section ======= -->
   <section id="contact" style=" background: url('assets/img/portfolio/hands-close-up-executives-showing-project.png') center top no-repeat fixed;
-  background-size: cover;
-  padding: 60px 0 40px 0;
-  position: relative;">
-    <div class="container" data-aos="fade-up">
+            background-size: cover;
+            padding: 60px 0 40px 0;
+            position: relative;">
+      <div class="container" data-aos="fade-up">
 
       <div class="section-header">
         <h3 style="color: white;">لطلب خدمة</h3>
@@ -111,8 +111,8 @@
           <div class="row">
             <div class="form-group">
               <label>اختر الخدمة</label><br>
-               <select class="form-group col-md-12">
-                   <option>استشارة ادارية
+               <select class="form-group col-md-12 form-control">
+                   <option  class="form-control">استشارة ادارية
                     <ul>
                       <option>	حوكمة الشركات</option>
                       <option>وضع مؤشرات تقييم الأداء </option>
@@ -126,7 +126,7 @@
                       <option>الاستشارات التسويقية</option>
                     </ul>
                    </option>
-                   <option> استشارة مالية
+                   <option  class="form-control"> استشارة مالية
                     <ul>
                       <option>	إعداد السياسات والإجراءات الداخلية للمنشأة</option>
                       <option>	وضع الخطط المالية والموازنات التقديرية وفق التوجهات الاستراتيجية</option>
@@ -142,7 +142,7 @@
                     
                     </ul>
                    </option>
-                   <option> استشارة ضريبية
+                   <option  class="form-control"> استشارة ضريبية
                     <ul>
                       <option>ضريبة القيمة المضافة</option>
                       <option>خدمات الاستشارات الضريبية</option>
